# 4k_gstreamer

./: README.md
jetson-gstreamer-app/: CMakeLists.txt  README.md
jetson-gstreamer-app/buid/: CMakeCache.txt  Makefile  cmake_install.cmake
jetson-gstreamer-app/buid/src/: Makefile  cmake_install.cmake
jetson-gstreamer-app/scripts/: setup.sh
jetson-gstreamer-app/src/: basic-tutorial-1  basic-tutorial-2  basic-tutorial-2.c  main  main.c  main.cpp  main01  main01.c
jetson-gstreamer-app/src（复件01）-Copolit start/: CMakeLists.txt  main.c
